--- a/src/index.html
+++ b/src/index.html
@@ -13,46 +13,71 @@
 				<h1>Currency Converter</h1>
 			</section>
 
-			<section>
-				<h1><a href="#3">Converter Online</a></h1>
-				<h1><a href="#5">Converter Offline</a></h1>
-			</section>
+			<section id="C-On">
+				<h2>Currency Converter</h2>
+					<label>Currency 1 :</label>
+					<select id="C1">
+						<include>Konversi.html</include>
+					</select>
 
-			<section>
-				<h2>Converter Online</h2>
-			</section>
+					<label>Nilai Mata Uang :</label>
+					<input type="number" min="0" max="10000000000" value="0" />
 
-			<section>
-				<h2>Jenis Mata Uang : </h2>
-				<select id="C1">
-					<include>matauang.html</include>
-				</select>
-				<h2>Nilai Mata Uang : </h2>
-				<input type="number" min="0" max="10000000000" value="0" />
-				<h2>Target Mata Uang : </h2>
-				<select id="C2">
-					<include>matauang.html</include>
-				</select>
+					<label>Currency 2 :</label>
+					<select id="C2">
+						<include>Konversi.html</include>
+					</select>
+				</p>
+				<input type="submit" value="Exchange"/>
 				<input type="submit" value="Convert"/>
 			</section>
 
 			<section>
-				<h2>Converter Offline</h2>
+				<h3>Hasil Converter</h3>
+				<div id="R-On">none</div>
 			</section>
 
 			<section>
-				<h3>END OF FILE</h3>
+				<h3>CURRENCY LIST</h3>
+				<div id="List">
+					<include>Konversi.html</include>
+				</div>
 			</section>
 		</article>
 	<script src="build/jquery.min.js"></script>
 	<script>
 		$(document).ready(function(){
-			$("button").click(function(){
-				alert("This is an alert");
+			var moneyx = [];
+			var moneyy = [];
+			for(var i = 0; i < 53; i++){
+				var x,y;
+				x = $("#C1 option").eq(i).html();
+				y = "(" + x.split("	")[3] + ") " + x.split("	")[1];
+				$("#C1 option").eq(i).html(y);
+				$("#C2 option").eq(i).html(y);
+				moneyy.push($.trim(y));
+				moneyx.push($.trim(x));
+			}
+			$("#C-On input[value='Exchange']").click(function(){
+				var x = $("#C1").val();
+				var y = $("#C2").val();				
+				$("#C1").val(y);
+				$("#C2").val(x);
 			});
-		});
-		$(window).keypress(function(event){
-			alert("keyboard active");
+			$("#C-On input[value='Convert']").click(function(){
+				var k, l, m, n, r, s, x, y, z;
+				x = $("#C1").val();		y = $("#C2").val();
+				z = $("#C-On input[type='number']").val();
+				k = $.inArray(x,moneyy);	l = moneyx[k];
+				m = l.split("	")[4];		r = z / m;
+				n = l.split("	")[1];		z = parseInt(z).toFixed(2) + " " + n;
+				k = $.inArray(y,moneyy);	l = moneyx[k];
+				m = l.split("	")[4];		r = r * m;
+				n = l.split("	")[1];		r = r.toFixed(2) +" "+ n;
+				var result = "<label>"+ x + ": </label>" + z + "<br><label>" + y + ": </label>" + r;
+				$("#R-On").html(result);
+				window.location.href="#3";
+			});
 		});
 	</script>
     <script src="build/build.js"></script>
