Algo perhitungan finished

--- a/Compounding/Compound.html
+++ b/Compounding/Compound.html
@@ -143,11 +143,14 @@
 		MD.value = 0;
 		PM.value = 0;
 		AIR.value = 0;
-		C.value = 0;
 		TP.value = 0;
+		TP.innerHTML = 'Rp.0';
 		IA.value = 0;
+		IA.innerHTML = 'Rp.0';
 		MV.value = 0;
+		MV.innerHTML = 'Rp.0';
 		APY.value = 0;
+		APY.innerHTML = '0%';
 	}
 
 	document.getElementById('count').onclick = function(){
